--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,13 +56,13 @@ header .btn-outline-light:hover {
 }
 
 .social-icons a {
-    font-size: 1.25rem; /* Adjust size as needed */
-    color: #f8f8f8; /* Icon color */
+    font-size: 1.25rem;
+    color: #f8f8f8; 
     transition: color 0.3s ease;
 }
 
 .social-icons a:hover {
-    color: #007bff; /* Change color on hover */
+    color: #007bff; 
 }
 
 /* Hero Section */
@@ -102,7 +102,7 @@ header .btn-outline-light:hover {
     padding: 10px 20px;
 }
 
-/* Features Section */
+/*Features Section */
 .features-section {
     padding: 60px 0;
     background-color: #ffffff;
@@ -112,11 +112,45 @@ header .btn-outline-light:hover {
     padding: 20px;
 }
 
-
-/* Footer */
+/*footer*/
 .footer {
     background-color: #3c4843;
     color: #ffffff;
-    padding: 30px 0;
+    padding: 40px 0;
     text-align: center;
+}
+
+.footer h5 {
+    color: #ffffff;
+    margin-bottom: 15px;
+    font-weight: 600;
+}
+
+.footer p {
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+.footer .social-icons a {
+    font-size: 18px;
+    color: #ffffff;
+    transition: color 0.3s;
+}
+
+.footer .social-icons a:hover {
+    color: #FFD700; /* Gold color on hover */
+}
+
+.footer .input-group {
+    max-width: 350px;
+    margin: auto;
+}
+
+.footer .btn-primary {
+    background-color: #FFD700; /* Gold color for button */
+    border: none;
+}
+
+.footer .btn-primary:hover {
+    background-color: #ffcc00;
 }
