--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,42 +13,77 @@ body {
     padding: 0 15px;
 }
 
-header {
-    background-color: #3c4843;
-    color: #000000;
+
+.top-header {
+    background-color: #2c3e50; 
+    color: #ffffff;
+    padding: 10px 0;
+    font-size: 0.9rem;
+    position: relative; 
+    z-index: 5; 
+}
+
+.top-header .contact-info {
+    display: inline-block; /* Ensure content is centered */
+}
+
+.top-header .contact-info span {
+    margin: 0 15px;
+}
+
+.top-header .contact-info i {
+    margin-right: 5px;
+}
+
+/* Main Header Styles */
+.main-header {
+    background: none;
+    position: absolute; 
+    width: 100%;
+    top: 50px;
+    z-index: 10;
+    color: #ffffff;
     padding: 15px 0;
 }
 
-header .container {
+.main-header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header .nav {
-    flex: 1;
+.main-header .nav {
+    display: flex;
     justify-content: center;
+    flex: 1;
+    gap: 10px; 
 }
 
-header .nav-link {
+.main-header .nav-link {
     color: #ffffff;
     font-weight: bold;
+    padding: 10px 20px; 
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    text-decoration: none;
+    transition: background-color 0.3s ease, color 0.3s ease;
     margin: 0 15px;
 }
 
-header .nav-link:hover {
-    color: #cde674;
+.main-header .nav-link:hover {
+    background-color: #2c3e50; 
 }
 
-header .btn-outline-light {
+.main-header .btn-outline-light {
     color: #000000; 
     border-color: #000000;
 }
 
-header .btn-outline-light:hover {
+.main-header .btn-outline-light:hover {
     color: #ffffff;
     background-color: #000000;
 }
+
 
 .social-icons {
     display: flex;
@@ -75,12 +110,12 @@ header .btn-outline-light:hover {
     align-items: center;
     justify-content: center;
     text-align: center;
-    height: 60vh; 
+    height: 100vh; 
     display: flex;
 }
 
 .hero-content {
-    background-color: rgba(0, 0, 0, 0.5); /* Transparent black background */
+    background-color: rgba(0, 0, 0, 0.5);
     padding: 2rem;
     text-align: center;
     max-width: 800px;
